Don't allow text in filter buttons to wrap && make sure they're centered on the page.

--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -112,6 +112,7 @@
 
   .listings__button {
     background-color: $primary-color-darker;
+    min-width: 120px;
     color: white;
     border: none;
     cursor: pointer;
