--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,10 @@
   background-color: $primary-color;
 }
 
+.mx-auto {
+  margin: 0 auto;
+}
+
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
